# idapatch

./: .gitignore  CMakeLists.txt  LICENSE  README.txt  Utf8Ini.h  idapatch-fork.sln  idapatch-fork.vcxproj  idapatch.sln  idapatch.vcxproj  module.cpp  module.h  patternfind.cpp  patternfind.h  plugin_entry.cpp
